# ppx_universe

./: .gitignore  .gitmodules  rev-deps.locked
dev/: create_workspace.sh  every_step.sh  helpers.sh  rev-deps.sh
duniverse/js_of_ocaml/: dune-project  js_of_ocaml-compiler.opam  js_of_ocaml-lwt.opam  js_of_ocaml-ppx.opam  js_of_ocaml-ppx_deriving_json.opam  js_of_ocaml-toplevel.opam  js_of_ocaml-tyxml.opam  js_of_ocaml.opam
duniverse/js_of_ocaml/compiler/lib/: base64.mli
duniverse/ocaml-rpc/: dune-project  ppx_deriving_rpc.opam  rpc.opam  rpclib-async.opam  rpclib-html.opam  rpclib-js.opam  rpclib-lwt.opam  rpclib.opam
duniverse/ocf/: Changes  Makefile  README.md  TODO  dune-project  ocf.opam  ocf_ppx.opam
duniverse/ocf/lib/: dune  ocf.ml  ocf.mli
duniverse/ocf/ppx/: dummy.ml  dune  ppx_ocf.ml
duniverse/ocf/test/: dune  ocf_test.ml  ocf_test2.ml
duniverse/repr/: dune-project  ppx_repr.opam  repr-bench.opam  repr-fuzz.opam  repr.opam
duniverse/stdcompat/: Makefile.in  configure  dune  stdcompat_tests.ml
rev-deps/: .deps
