(lang dune 2.9)
(name ocf)
(version 0.8.0)
(generate_opam_files true)

(source (uri git+https://framagit.org/zoggy/ocf.git))
(license GPL-3.0-only)
(authors "Zoggy <zoggy@bat8.org>")
(maintainers "zoggy@bat8.org")
(bug_reports https://framagit.org/zoggy/ocf/issues)
(homepage https://zoggy.frama.io/ocf/)
(documentation https://zoggy.frama.io/ocf/doc.html)

(package
 (name ocf)
 (tags (configuration options json))
 (synopsis "OCaml library to read and write configuration files in JSON syntax")
 (depends
   (ocaml (>= 4.12.0))
   (yojson (>= 1.7.0))
 )
)

(package
 (name ocf_ppx)
 (synopsis "Preprocessor for Ocf library")
 (depends
   (ocf (= :version))
   (ppxlib (>= 0.23.0))
 )
)

