(executable
  (name ocf_test)
  (modules ocf_test)
  (libraries ocf)
  (flags -g :standard -w -6-7-9-32-33-34-35-36-50-52-26-27 -no-strict-sequence -bin-annot)
  (preprocess (pps ocf_ppx))
)

(executable
  (name ocf_test2)
  (modules ocf_test2)
  (libraries ocf)
  (flags -g :standard -w -6-7-9-32-33-34-35-36-50-52-26-27 -no-strict-sequence -bin-annot)
  (preprocess (pps ocf_ppx))
)


